# template-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  vcpkg.json
.github/workflows/: cpp-ci.yml
include/: greeter.hpp
src/: greeter.cpp  main.cpp
tests/: test_greeter.cpp
